fix: improve input validation and treats unique violation